# attiny-neopixel-receiver

./: Cargo.toml  avr-attiny85.json
.cargo/: config.toml
src/: intrinsics.rs  main.rs  packet.rs
src/peripherals/: eeprom.rs  led.rs  mod.rs  pins.rs  spi.rs
