[package]
name = "attiny-neopixel"
version = "0.1.0"
edition = "2021"

[dependencies]
# attiny-hal = { git = "https://github.com/Rahix/avr-hal.git", features = [
#     "attiny85",
# ] }
avr-device = { version = "0.5.4", features = ["attiny85"] }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
nb = "1.1"
embedded-nrf24l01 = { git = "https://github.com/burgerindividual/embedded-nrf24l01" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "debuginfo"

[profile.dev]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[profile.test]
inherits = "dev"
